--- a/rbac/gh-secret.yaml
+++ b/rbac/gh-secret.yaml
@@ -4,5 +4,5 @@ metadata:
   name: webhook-secret
   namespace: getting-started
 stringData:
-  token: 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
+  token: <>
   secret: random-string-data
