--- a/secret.yaml
+++ b/secret.yaml
@@ -6,3 +6,7 @@ metadata:
 stringData:
   token: <REPLACE_WITH_GITHUB_TOKEN>
   secret: random-string-data
+
+# Secret for Docker registry or GCR
+# kubectl create -n getting-started secret docker-registry regcred  --docker-server=https://index.docker.io/v1/ --docker-username=<> --docker-password=<> --docker-email <>
+
